--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.10",
+    "@heroicons/vue": "^2.0.16",
     "flowbite": "^1.6.3",
     "flowbite-vue": "^0.0.10",
     "pinia": "^2.0.28",
