--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "flowbite-vue": "^0.0.10",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
