--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
     "vue-i18n": "^9.2.2",
+    "vue-meta": "^3.0.0-alpha.10",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
