--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.10",
     "@heroicons/vue": "^2.0.16",
+    "@vueuse/head": "^2.0.0",
     "flowbite": "^1.6.3",
     "flowbite-vue": "^0.0.10",
     "pinia": "^2.0.28",
